Configurar entorno del servidor

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -9,7 +9,7 @@
 				<h1><span>4</span><span>0</span><span>4</span></h1>
 			</div>
 			<h2>Lo sentimos, pero no se encontró la página que solicito</h2>
-            <a href="/admin" class="btn btn-primary">Volver a Dashboard</a>
+            <a href="/" class="btn btn-primary">Volver a PIXIE</a>
 		</div>
 	</div>
 </div>
