--- a/views/partials/extras/header.hbs
+++ b/views/partials/extras/header.hbs
@@ -134,6 +134,13 @@
 											</a>
 										</li>
 										<hr>
+
+										<li class="nav-item">
+											<a href="/list-prizes" class="icons">
+												<i class="fas fa-luggage-cart"></i>
+											</a>
+										</li>
+										<hr>
 									{{else}}
 										<hr>
 										
