--- a/views/user/listar-empresas.hbs
+++ b/views/user/listar-empresas.hbs
@@ -79,7 +79,7 @@
 				{{else}}
 					<div class="col-lg-12" style="text-align: center;">
 						{{!-- <div class="hot_deal_box"> --}}
-							<img class="img-fluid" src="/users/img/empty.png" alt="" style="max-width: 30%">
+							<img class="img-fluid" src="/users/img/empty.png" alt="" style="max-width: 40%; min-height: 200px; min-width: 200px;">
 							<div class="content pt-3">
 								<h2>No tiene empresas asociadas</h2>
 							</div>
