Agregar Recuperar Contraseña

--- a/views/partials/extras/footer.hbs
+++ b/views/partials/extras/footer.hbs
@@ -63,17 +63,11 @@
 						<h6 class="footer_title">Síguenos</h6>
 						<p>Redes Sociales</p>
 						<div class="f_social">
-							<a href="#">
+							<a href="https://www.facebook.com/pixiepoints" target="_blank">
 								<i class="fa fa-facebook"></i>
 							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-dribbble"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-behance"></i>
+							<a href="https://www.instagram.com/pixiepoints_oficial" target="_blank">
+								<i class="fa fa-instagram"></i>
 							</a>
 						</div>
 					</div>
