--- a/views/user/reestablecer-password.hbs
+++ b/views/user/reestablecer-password.hbs
@@ -21,7 +21,7 @@
 	<section class="login_box_area p_120">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6">
+				{{!-- <div class="col-lg-6">
 					<div class="login_box_img">
 						<img class="img-fluid" src="/users/img/login.jpg" alt="">
 						<div class="hover">
@@ -30,17 +30,17 @@
 							<a class="main_btn" href="/registrer">Crear una Cuenta</a>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="login_form_inner">
-						<h3>INICIAR SESIÓN PARA ENTRAR</h3>
-						<form class="row login_form" action="/login" method="POST" id="contactForm">
+				</div> --}}
+				<div class="col-lg-12">
+					<div class="login_form_inner" style="padding-bottom: 65px;">
+						<h3>Recuperar Contraseña</h3>
+						<form class="row login_form" action="/reestablecer-password" method="POST" id="contactForm">
 							<div class="col-md-12 form-group">
-								<input type="email" class="form-control" id="email" name="email" placeholder="Nombre de Usuario">
+								<input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email">
 							</div>
-							<div class="col-md-12 form-group">
+							{{!-- <div class="col-md-12 form-group">
 								<input type="password" class="form-control" id="password" name="password" placeholder="Contraseña">
-							</div>
+							</div> --}}
 							{{!-- <div class="col-md-12 form-group">
 								<div class="creat_account">
 									<input type="checkbox" id="f-option2" name="selector">
@@ -48,8 +48,8 @@
 								</div>
 							</div> --}}
 							<div class="col-md-12 form-group">
-								<button type="submit" value="submit" class="btn submit_btn">Iniciar Sesión</button>
-								<a href="/reestablecer-password">¿Se te olvido tu contraseña?</a>
+								<button type="submit" value="submit" class="btn submit_btn">Reestablecer Contraseña</button>
+								<a href="/login">Iniciar Sesión</a>
 							</div>
 						</form>
 					</div>
