--- a/views/emails/confirmar-premio.hbs
+++ b/views/emails/confirmar-premio.hbs
@@ -174,7 +174,7 @@
                         margin: 0px 0px 8px;
                         font-size: 14px;
                     ">¡Pequeños puntos , grandes premios !</p>
-                    <a href="https://www.facebook.com/EDteamLat/" target="_blank" style="
+                    <a href="https://www.facebook.com/pixiepoints/" target="_blank" style="
                         margin-right: 8px;
                         display: inline-block;
                     ">
@@ -183,7 +183,7 @@
                             height: auto;
                         ">
                     </a>
-                    <a href="https://www.facebook.com/EDteamLat/" target="_blank" style="
+                    <a href="https://www.instagram.com/pixiepoints_oficial/" target="_blank" style="
                         margin-right: 8px;
                         display: inline-block;
                     ">
