--- a/views/partials/extras/header.hbs
+++ b/views/partials/extras/header.hbs
@@ -30,7 +30,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://puntospixie.herokuapp.com/">
+							<a href="https://pixie-puntos-demo.netlify.app/admin/login">
 								Empresas
 							</a>
 						</li>
