Agregar validacion al formulario de registro

--- a/views/user/registro.hbs
+++ b/views/user/registro.hbs
@@ -32,7 +32,7 @@
 				<div class="col-lg-6">
 					<div class="login_form_inner reg_form">
 						<h3 class="my-1">Crear una Cuenta</h3>
-						<form class="row login_form" action="" method="post" id="form-dni" novalidate="novalidate">
+						<form class="row login_form" action="" method="post" id="form-dni">
 							<div class="col-md-12 form-group">
 								<input type="text" class="form-control" id="dni" name="dni" placeholder="Ingresar DNI" required>
 							</div>
@@ -40,7 +40,7 @@
 								<button type="submit" value="submit" class="btn submit_btn">Registrarse</button>
 							</div>
 						</form>
-						<form class="row login_form" action="" method="post" id="form-client" novalidate="novalidate">
+						<form class="row login_form" action="" method="post" id="form-client">
 							<div class="col-md-12 form-group">
 								<input type="text" class="form-control" id="nombres" name="nombres" placeholder="Nombres" disabled>
 							</div>
