--- a/views/user/listar-empresas.hbs
+++ b/views/user/listar-empresas.hbs
@@ -66,13 +66,13 @@
 				{{#if empresas.length}}
 					{{#each empresas}}
 						<div class="col-lg-6" style="padding: 15px;">
-							<div class="hot_deal_box">
+							<div class="hot_deal_box" id="container-business" data-id="{{id}}">
 								<img class="img-fluid" src="/users/img/product/hot_deals/deal1.jpg" alt="">
 								<div class="content">
 									<h2 class="limit-text">{{nombre}}</h2>
 									<p>Ver Catalogo</p>
 								</div>
-								<a class="hot_deal_link" href="/business/{{id}}"></a>
+								{{!-- <a class="hot_deal_link" href="/business/{{id}}"></a> --}}
 							</div>
 						</div>
 					{{/each}}
